# AIDevHub

./: .env.example  .gitignore  README.md  pyproject.toml
docs/theory/: AI_Brief.md  prompt_engineering.md  prompts.md  transformer.md
examples/: eg_prompt_basic.py  eg_transformer_basic.py
src/aidevhub/: __init__.py  cli.py
