[project]
name = "aidevhub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.38.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
aidevhub = "aidevhub.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]