[project]
name = "aidevhub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "openai>=2.38.0",
    "python-dotenv>=1.1.1",
    "torch>=2.12.1",
]

[project.scripts]
aidevhub = "aidevhub.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
